--- a/src/styles/theme/colors.scss
+++ b/src/styles/theme/colors.scss
@@ -1,2 +1,11 @@
 $color-white: #fff;
-$color-primary: #f2c94c;
+
+$color-space-blue: #235ef5;
+$color-red: rgb(255, 0, 0);
+$color-orange: orange;
+$color-green: green;
+
+$color-gray: #dcdde0;
+$color-gray-237: rgb(237, 237, 237);
+
+
